<resources>
    <string name="app_name">Bali tide</string>
    <string name="title_activity_main">Bali tide</string>
    <string name="title_activity_widget_config">Configure widget</string>
    <string name="info">data from <a href="http://www.tide-forecast.com/locations/Denpasar/tides/latest">tide-forecast</a></string>

    <string name="port">Port</string>
    <string name="choose_port">Choose port…</string>

    <string name="time_range">Time range</string>
    <string name="full">full (24h)</string>
    <string name="crop">crop (18h)</string>

    <string name="show_name">Show name</string>
    <string name="show">show</string>
    <string name="no">no</string>

    <string name="update">Update</string>

    <string name="search_for">Search…</string>

    <string name="no_data">No data</string>

    <string name="different_time_zone">Different timezone:</string>

    <string name="no_results" translatable="false">No results matching request</string>
    <string name="rate_msg">\nWe\'ll be glad to receive\nyour feedback. Thanks!\n\nAlan and Sergei.</string>
    <string name="rate_title">Rate app if you enjoy it</string>
    <string name="rate_no">no, never</string>
    <string name="rate_later">later</string>
    <string name="rate_rate">rate app</string>
</resources>
