<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.avaa.balitidewidget.NewWidgetConfigActivity"
    android:background="#FFFFFFFF">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="0dp"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        android:orientation="horizontal"
        >
        <FrameLayout
            android:id="@+id/btnBack"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="4dp"
            android:textColor="#ffffff"
            android:clickable="true"
            android:onClick="btnBackClick"
            >
            <ImageView
                android:src ="@drawable/ic_arrow_back_white_24dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/title_activity_widget_config"
            android:paddingTop="3dp"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical|start"/>
        <FrameLayout
            android:id="@+id/btnOk"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:minWidth="80dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="4dp"
            android:textColor="#ffffff"
            android:clickable="true"
            android:visibility="invisible"
            android:onClick="btnOkClick"
            >
            <ImageView
                android:id="@+id/btnOkImage"
                android:src ="@drawable/ic_check_white_24dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:text="@string/port"/>

        <EditText
            android:id="@+id/tvPort"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text=""
            android:hint="@string/choose_port"
            android:editable="false"
            android:textSize="18dp"
            android:layout_weight="1"
            android:textIsSelectable="true"
            android:gravity="center_vertical|start"
            android:background="@android:color/transparent"
            android:textColor="#FF000000"
            android:onClick="choosePort"
            />
        <!--
        android:textCursorDrawable="@drawable/black_cursor"
        android:cursorVisible="true"
        android:imeOptions="actionSearch"
        android:inputType="text"
        -->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingTop="20dp"-->
            <!--android:text="Update every"/>-->

        <!--<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="60dp"-->
            <!--android:gravity="center_vertical|end"-->

            <!--android:orientation="horizontal">-->
            <!--<RadioButton android:id="@+id/rb5min"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="5"-->
                <!--android:paddingRight="20dp"-->
                <!--android:onClick="onRadioButtonClicked"/>-->
            <!--<RadioButton android:id="@+id/rb10min"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="10"-->
                <!--android:paddingRight="20dp"-->
                <!--android:onClick="onRadioButtonClicked"/>-->
            <!--<RadioButton android:id="@+id/rb20min"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="20"-->
                <!--android:paddingRight="20dp"-->
                <!--android:onClick="onRadioButtonClicked"/>-->
            <!--<RadioButton android:id="@+id/rb30min"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="30"-->
                <!--android:paddingRight="20dp"-->
                <!--android:onClick="onRadioButtonClicked"/>-->
        <!--</RadioGroup>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/time_range"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical|start"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/rbFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full"
                android:checked="true"
                android:paddingRight="20dp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/rbCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crop"
                android:paddingRight="20dp"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/show_name"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical|start"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/rbShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:paddingRight="20dp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/rbNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:checked="true"
                android:paddingRight="20dp"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flChoosePort"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >
        <fragment
            android:name="com.avaa.balitidewidget.ChoosePortFragment"
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </FrameLayout>

</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>