<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/MainActivityMainLayout"
    tools:context="com.avaa.balitidewidget.MainActivity"
    android:background="#ffffff">

    <!--####################-->

    <RelativeLayout
        android:id="@+id/rlMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <com.google.android.gms.maps.MapView android:id="@+id/mvMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <FrameLayout
            android:id="@+id/btnSearch"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/rounded"
            android:elevation="2dp"
            android:padding="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textColor="#ffffff"
            android:clickable="true"
            android:onClick="btnSearchClick"
            >
            <ImageView
                android:src ="@drawable/ic_search_white_24dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnShowMe"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/rounded"
            android:elevation="2dp"
            android:padding="0dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textColor="#ffffff"
            android:clickable="true"
            android:onClick="btnShowMeClick"
            >
            <ImageView
                android:src ="@drawable/ic_my_location_black_24dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/llSearchScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:background="#ffffffff"
            android:elevation="4dp"
            >

        <LinearLayout
            android:id="@+id/llSearchBar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:background="#ffffffff"
            android:elevation="6dp"
            >
            <FrameLayout
                android:id="@+id/btnCloseSearch"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="4dp"
                android:textColor="#ffffff"
                android:clickable="true"
                android:onClick="btnCloseSearchClick"
                >
                <ImageView
                    android:src ="@drawable/ic_arrow_back_black_24dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    />
            </FrameLayout>
            <com.avaa.balitidewidget.views.ExtendedEditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/search_for"
                android:textSize="18dp"
                android:layout_weight="1"
                android:paddingTop="3dp"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/black_cursor"
                android:textIsSelectable="true"
                android:gravity="center_vertical|left"
                android:background="@android:color/transparent"
                />
            <FrameLayout
                android:id="@+id/btnClearSearch"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:minWidth="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:paddingTop="4dp"
                android:textColor="#ffffff"
                android:clickable="true"
                android:visibility="gone"
                android:onClick="btnClearSearchClick"
                >
                <ImageView
                    android:src ="@drawable/ic_clear_black_24dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    />
            </FrameLayout>
        </LinearLayout>
        <ListView
            android:id="@+id/lvSearchResults"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >
        </ListView>
        </LinearLayout>
    </RelativeLayout>

    <!--####################-->

    <com.avaa.balitidewidget.views.ObservableScrollView
        android:id="@+id/svScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/llScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="1500px"
                android:clickable="true"
                >
                <FrameLayout
                    android:id="@+id/btnShowInMapsApp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/rounded"
                    android:elevation="2dp"
                    android:padding="0dp"
                    android:textColor="#ffffff"
                    android:clickable="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:onClick="btnShowInMapsAppClick"
                    >
                    <ImageView
                        android:src ="@drawable/ic_map_black_24dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        />
                </FrameLayout>
                <FrameLayout
                    android:id="@+id/btnReportMistake"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:background="@drawable/rounded"
                    android:elevation="2dp"
                    android:padding="0dp"
                    android:textColor="#ffffff"
                    android:clickable="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:onClick="btnReportMistakeClick"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="MISTAKE?"
                        android:textSize="14dp"
                        android:textColor="#ff000000"/>
                </FrameLayout>
                <LinearLayout
                    android:id="@+id/tidesTopShadow"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/shadow_top"
                    android:orientation="horizontal">
                </LinearLayout>
            </RelativeLayout>
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#000000"
                android:background="#ffffff"
                android:textSize="18dp"
                android:text="Today"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="15dp" />
            <ImageView
                android:id="@+id/iv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:visibility="gone"
                android:onClick="ivClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#000000"
                android:background="#ffffff"
                android:textSize="18dp"
                android:text="Tomorrow"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:id="@+id/textView2"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/iv2"
                android:onClick="ivClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#777777"
                android:background="#ffffff"
                android:textSize="18dp"
                android:text="After tomorrow"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:id="@+id/textView3" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/iv3"
                android:adjustViewBounds="true"
                android:onClick="ivClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#777777"
                android:background="#ffffff"
                android:textSize="18dp"
                android:text="After tomorrow"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:id="@+id/textView4" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/iv4"
                android:adjustViewBounds="true"
                android:onClick="ivClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="#777777"
                android:background="#ffffff"
                android:textSize="18dp"
                android:text="After tomorrow"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:id="@+id/textView5" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/iv5"
                android:adjustViewBounds="true"
                android:onClick="ivClick"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffffff"
                android:orientation="vertical">
            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:textSize="18dp"
                android:text="@string/no_data"
                android:textColor="#888888"
                android:visibility="gone"
                android:gravity="center"
                />
                <!--android:background="#fff2f2f2"-->
            <com.avaa.balitidewidget.views.TideLoadingIndicator
                android:id="@+id/tideLoadingIndicator"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                />
            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                android:text="@string/update"
                android:onClick="btnUpdateClick"
                />
            </LinearLayout>
        </LinearLayout>
    </com.avaa.balitidewidget.views.ObservableScrollView>

    <!--####################-->

    <LinearLayout
        android:id="@+id/llPortHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryABitDark"
        android:elevation="4dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="0dp"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        android:orientation="horizontal"
        >
        <FrameLayout
            android:id="@+id/btnBack"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="4dp"
            android:textColor="#ffffff"
            android:clickable="true"
            android:onClick="btnClosePortClick"
            >
            <ImageView
                android:src ="@drawable/ic_arrow_back_white_24dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/title_activity_main"
            android:paddingTop="3dp"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical|start"/>
        <!--<TextView-->
            <!--android:layout_width="0px"-->
            <!--android:layout_height="1px"-->
            <!--android:layout_weight="2"/>-->
        <FrameLayout
            android:id="@+id/btnOk"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:minWidth="80dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="4dp"
            android:textColor="#ffffff"
            android:clickable="true"
            android:onClick="btnStarClick"
            >
            <ImageView
                android:id="@+id/btnOkImage"
                android:src ="@drawable/ic_star_border_white_24dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llDifferentTimeZoneLabel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryABitDark"
        android:elevation="4dp"
        android:paddingLeft="20dp"
        android:paddingTop="2dp"
        android:paddingRight="20dp"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/tvDifferentTimeZoneLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#eeffffff"
        android:textSize="15dp"
        android:text="Different time zone: UTC+5"
        android:gravity="start|center_vertical"
        />
    </LinearLayout>
</LinearLayout>

    <!--####################-->

</android.support.design.widget.CoordinatorLayout>